syntax = "proto3";

package plakar.store.v2;

enum StorageResource {
  STORAGE_RESOURCE_UNDEFINED = 0;
  STORAGE_RESOURCE_PACKFILE = 1;
  STORAGE_RESOURCE_STATE = 2;
  STORAGE_RESOURCE_LOCK = 3;
  STORAGE_RESOURCE_ECC_PACKFILE = 4;
  STORAGE_RESOURCE_ECC_STATE = 5;
}

service Store {
  rpc Init(InitRequest) returns (InitResponse);

  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Open(OpenRequest) returns (OpenResponse);
  rpc Ping(PingRequest) returns (PingResponse);

  rpc Mode(ModeRequest) returns (ModeResponse);
  rpc Size(SizeRequest) returns (SizeResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Put(stream PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (stream GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  rpc Close(CloseRequest) returns (CloseResponse);
}

message InitRequest {
  string proto = 1;
  map<string, string> config = 2;
}

message InitResponse {
  string origin = 1;
  string type = 2;
  string root = 3;
  uint32 flags = 5;
}

message CreateRequest {
  bytes config = 1;
}
message CreateResponse {}

message OpenRequest {}
message OpenResponse {
  bytes config = 1;
}

message PingRequest {}
message PingResponse {}

message ModeRequest {}
message ModeResponse {
  int32 mode = 1;
}

message CloseRequest {}
message CloseResponse {}


message SizeRequest {}
message SizeResponse {
  int64 size = 1;
}

message ListRequest {
  StorageResource type = 1;
}
message ListResponse {
  repeated bytes macs = 1;
}

message PutRequest {
  bytes mac = 1;
  StorageResource type = 2;
  bytes chunk = 3;
}
message PutResponse {
  int64 bytes_written = 1;
}

message GetRequest {
  message Range {
    uint64 offset = 1;
    uint32 length = 2;
  }

  bytes mac = 1;
  StorageResource type = 2;
  optional Range range = 3;
}
message GetResponse {
  bytes chunk = 1;
}

message DeleteRequest {
  bytes mac = 1;
  StorageResource type = 2;
}
message DeleteResponse {}

